--- a/src/style.css
+++ b/src/style.css
@@ -1,26 +1,40 @@
+:root {
+	--bg-color: linear-gradient(
+		to bottom,
+		hsl(113, 100%, 96%),
+		hsl(216, 100%, 93%)
+	);
+	--uprm-green: rgb(73, 141, 78);
+	--card-color: rgba(255, 255, 255, 0.492);
+	--card-shadow: 0 0 3px 1px rgb(195, 195, 195);
+}
+
 * {
 	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
-	background: linear-gradient(
-		to right,
-		hsl(113, 100%, 96%),
-		hsl(216, 100%, 93%)
-	);
+	background: var(--bg-color);
+	height: 100%;
+	margin: 0;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
 }
 
 h1 {
 	font-size: 24px;
+	width: 100%;
 }
 
 h2 {
 	font-size: 18px;
+	width: 100%;
 }
 
 h3 {
 	font-size: 15px;
 	margin-bottom: 5px;
+	width: 100%;
 }
 
 select {
@@ -28,26 +42,31 @@ select {
 	font-size: 14px;
 	border: none;
 	box-shadow: 0 0 1px 1px rgb(177, 177, 177);
-	background: rgba(255, 255, 255, 10%);
+	background: rgb(255, 255, 255);
 }
 
 select:hover {
-	background: rgb(225, 225, 225);
-	box-shadow: 0 0 3px 1px rgb(177, 177, 177);
+	/* background: rgb(244, 244, 244); */
+	box-shadow: 0 0 4px 1px rgb(177, 177, 177);
 }
 
 select:focus {
-	background: rgb(225, 225, 225);
-	box-shadow: 0 0 3px 1px rgb(177, 177, 177);
+	background: rgb(244, 244, 244);
+	box-shadow: 0 0 4px 1px rgb(177, 177, 177);
 }
 
 label {
 	font-size: 14px;
+	min-width: max-content;
+}
+
+input[type="radio"] {
+	min-width: max-content;
 }
 
 button {
 	border: none;
-	background: rgba(70, 134, 75, 90%);
+	background: var(--uprm-green);
 	color: white;
 	padding: 5px;
 	width: 25%;
@@ -55,8 +74,7 @@ button {
 }
 
 button:hover {
-	background: hsl(124, 50%, 40%);
-	box-shadow: 0 0 2px 1px rgb(54, 54, 54);
+	box-shadow: 0 0 4px 1px rgb(177, 177, 177);
 	cursor: pointer;
 }
 
@@ -71,7 +89,7 @@ button:active {
 	top: 0;
 	width: 100%;
 	height: 70px;
-	border-bottom: 5px solid rgb(73, 141, 78);
+	border-bottom: 5px solid var(--uprm-green);
 	box-shadow: 0 1px 8px 0 rgb(0, 0, 0);
 }
 
@@ -82,6 +100,7 @@ button:active {
 	color: white;
 	background: url(../assets/img/bio-optics_logo.png) no-repeat left;
 	background-size: 100px;
+	min-width: max-content;
 }
 
 .heading {
@@ -100,6 +119,7 @@ button:active {
 	width: calc(100% - 60px);
 	height: 100%;
 	display: flex;
+	min-width: max-content;
 }
 
 .details-container {
@@ -107,13 +127,13 @@ button:active {
 	width: 20%;
 	height: max-content;
 	margin-right: 20px;
-	box-shadow: 0 0 10px 1px rgb(182, 182, 182);
-	background: hsla(0, 0%, 100%, 40%);
+	box-shadow: var(--card-shadow);
+	background: var(--card-color);
 }
 
 .container-heading {
 	width: 100%;
-	border-bottom: 3px solid rgb(73, 141, 78);
+	border-bottom: 3px solid var(--uprm-green);
 	text-align: center;
 }
 
@@ -131,11 +151,12 @@ button:active {
 	padding: 20px;
 	width: calc(90% - 20px);
 	height: 100%;
-	box-shadow: 0 0 10px 1px rgb(182, 182, 182);
-	background: hsla(0, 0%, 100%, 40%);
+	box-shadow: var(--card-shadow);
+	background: var(--card-color);
 }
 
 .graph {
 	width: 100%;
 	height: 100%;
+	margin-top: 5px;
 }
