--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,9 @@
 :root {
-	--bg-color: white;
+	font-size: 62.5%;
+	--bg-color: whitesmoke;
 	--uprm-green: rgb(73, 141, 78);
-	--card-color: whitesmoke;
-	--card-shadow: 0 0 3px 1px rgb(195, 195, 195);
+	--card-color: white;
+	--card-shadow: 0 0 1rem 0.3rem rgb(230, 230, 230);
 }
 
 *,
@@ -12,25 +13,70 @@
 }
 
 body {
+	font-size: 1.6;
 	margin: 0;
 	background: var(--bg-color);
 }
 
+h1 {
+	font-size: 2.3rem;
+	margin: 3rem;
+}
+
+h2 {
+	font-size: 1.7rem;
+}
+
 .banner {
 	background: url(../assets/img/ocean.png);
-	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 70px;
+	box-shadow: 0 0 0.5rem 0.3rem rgb(116, 116, 116);
 }
 
 .logo {
-	font-size: 20px;
-	line-height: 70px;
-	text-indent: 110px;
+	font-size: 2rem;
+	line-height: 7rem;
+	text-indent: 11rem;
 	color: white;
 	background: url(../assets/img/bio-optics_logo.png) no-repeat left;
-	background-size: 100px;
-	min-width: max-content;
+	background-size: 10rem;
+}
+
+.app-container {
+	margin: 3rem;
+	display: flex;
+	align-items: center;
+	height: 50rem;
+}
+
+.nav-bar {
+	width: 30rem;
+	height: 100%;
+	background: var(--card-color);
+	box-shadow: var(--card-shadow);
+	margin-right: 1rem;
+}
+
+.options-card {
+	width: 50rem;
+	height: 100%;
+	background: var(--card-color);
+	box-shadow: var(--card-shadow);
+	margin-right: 1rem;
+}
+
+.graph-card {
+	width: 100%;
+	height: 100%;
+	background: var(--card-color);
+	box-shadow: var(--card-shadow);
+	margin-right: 1rem;
+}
+
+.heading {
+	width: 100%;
+	text-align: center;
+	border-bottom: 0.2rem solid var(--uprm-green);
 }
