--- a/docs/style.css
+++ b/docs/style.css
@@ -3,7 +3,7 @@
 
 	--uprm-green: rgb(73, 141, 78);
 	--card-color: white;
-	--card-shadow: 0 0 4px 2px rgb(173, 172, 172);
+	--card-shadow: 0 0 10px 1px rgb(208, 208, 208);
 }
 
 * {
@@ -37,13 +37,11 @@ h3 {
 select {
 	width: 100%;
 	font-size: 14px;
-	border: none;
-	box-shadow: 0 0 1px 1px rgb(177, 177, 177);
-	background: rgb(255, 255, 255);
+	background: whitesmoke;
+	border: 1px solid rgb(208, 208, 208);
 }
 
 select:hover {
-	/* background: rgb(244, 244, 244); */
 	box-shadow: var(--card-shadow);
 }
 
